added getEndpoint operation to api

--- a/Resources/config/parameters.yml
+++ b/Resources/config/parameters.yml
@@ -7,3 +7,6 @@ parameters:
   avr_timeout: 180
 
   sqlite: '../../christmas.sqlite'
+
+  local_ws_endpoint: 'ws://192.168.1.101:11221'
+  external_ws_endpoint: 'ws://api.lights.host/websocket'
