--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -19,7 +19,7 @@ services:
 
   message_component:
     class: '\Syntax\WebSocket\MessageComponent'
-    arguments: ['@clients_inmemory', '@statistics', '@database', '@controllers_dispatcher']
+    arguments: ['@clients_inmemory', '@statistics', '@database', '@controllers_dispatcher', '@start_message_states']
 
   controllers_dispatcher:
     class: '\Syntax\WebSocket\ControllersDispatcher'
@@ -45,3 +45,7 @@ services:
   ChangeState:
     class: '\Syntax\Controller\ChangeStateController'
     arguments: ['@lights_inmemory', '@clients_inmemory', '@loop', '@database']
+
+  start_message_states:
+    class: '\Syntax\Service\WebSocket\ChangeStateStartMessage'
+    arguments: ['@lights_inmemory']
