--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -19,7 +19,7 @@ services:
 
   message_component:
     class: '\Syntax\WebSocket\MessageComponent'
-    arguments: ['@clients_inmemory', '@statistics', '@database', '@controllers_dispatcher', '@start_message_states', '@start_message_colors', '@avr', '@colors_inmemory']
+    arguments: ['@clients_inmemory', '@statistics', '@database', '@controllers_dispatcher', '@start_message_states', '@start_message_colors', '@avr', '@colors_inmemory', '@log_displayer']
 
   controllers_dispatcher:
     class: '\Syntax\WebSocket\ControllersDispatcher'
@@ -44,7 +44,7 @@ services:
   # Common
   database:
     class: '\Syntax\Service\Database'
-    arguments: ['%sqlite%']
+    arguments: ['@log_displayer', '%sqlite%']
 
   statistics:
     class: '\Syntax\Service\Stats'
@@ -66,3 +66,11 @@ services:
   start_message_colors:
     class: '\Syntax\Service\WebSocket\ChangeColorStartMessage'
     arguments: ['@colors_inmemory']
+
+  # Admin
+  stdout:
+    class: '\Symfony\Component\Console\Output\ConsoleOutput'
+
+  log_displayer:
+    class: '\Syntax\Service\LogDisplayer'
+    arguments: ['@stdout']
