--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "clue/stdio-react": "^0.4.0",
         "symfony/dependency-injection": "^3.4",
         "symfony/yaml": "^3.4",
-        "symfony/config": "^3.4"
+        "symfony/config": "^3.4",
+        "symfony/console": "^3.4"
     },
     "autoload": {
         "psr-4": {
