--- a/Resources/config/parameters.yml
+++ b/Resources/config/parameters.yml
@@ -6,11 +6,15 @@ parameters:
   avr_port: 11222
   avr_timeout: 180
 
-  colors_changes_queue_default_duration: 2
-
-  sqlite: '../../christmas.sqlite'
+  queue_interval: 1
 
   local_ws_endpoint: '192.168.1.101:11221'
   external_ws_endpoint: 'api.lights.host/websocket'
 
   stream: '1I_XcCC9CiE?autoplay=1'
+
+  relays:
+    - {id: 0, name: 'Czerwony'}
+    - {id: 1, name: 'Zielony'}
+    - {id: 2, name: 'Niebieski'}
+    - {id: 3, name: 'Gwiazda'}
