--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
+        "ext-json": "^7.1",
         "cboden/ratchet": "dev-master",
         "clue/stdio-react": "^0.4.0",
         "symfony/dependency-injection": "^3.4",
