--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "symfony/dependency-injection": "^3.4",
         "symfony/yaml": "^3.4",
         "symfony/config": "^3.4",
-        "symfony/console": "^3.4"
+        "symfony/console": "^3.4",
+        "symfony/process": "^4.2"
     },
     "autoload": {
         "psr-4": {
